the json data for the viz have almost reached the final form (now with grouping by line)

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 229,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 230,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 231,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 232,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 233,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 234,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
        "29941"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 236,
    "metadata": {
     "collapsed": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 237,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 238,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -466,9 +466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 240,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "  u'work_urn': u'urn:cts:latinLit:phi0690.phi003'}}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 242,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 243,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +543,7 @@
        "12056"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 244,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +567,7 @@
        "  [u'7', u'176'])]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 245,
    "metadata": {
     "collapsed": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 246,
    "metadata": {
     "collapsed": false
    },
@@ -627,13 +627,35 @@
        "12056"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(references)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "556"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(invalid_citations)"
    ]
   },
   {
@@ -645,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 248,
    "metadata": {
     "collapsed": false
    },
@@ -675,35 +697,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#quotation_freq_df.loc[\"1-50\"][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "save_matrix_as_json(quotation_freq_df, \"../data/quot_freq.json\")"
    ]
   },
   {
@@ -715,7 +715,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 249,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyCTS import CTS_URN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
    "metadata": {
     "collapsed": true
    },
@@ -723,8 +734,241 @@
    "source": [
     "def group_by_passage(results):\n",
     "    index_of_passages = {}\n",
-    "    # DO STUFF\n",
+    "    for result in results:\n",
+    "        if(not \"type\" in result or result[\"type\"]==\"reference\"):\n",
+    "            result[\"type\"] = \"reference\"\n",
+    "            urn = CTS_URN(result[\"urns\"][\"reference_urn\"])\n",
+    "            scope = urn.passage_component\n",
+    "        elif(result[\"type\"]==\"quotation\"):\n",
+    "            urn = CTS_URN(result[\"all_urns\"][0])\n",
+    "            scope = urn.passage_component\n",
+    "        if scope in index_of_passages:\n",
+    "            index_of_passages[scope].append(result)\n",
+    "        else:\n",
+    "            index_of_passages[scope] = []\n",
+    "            index_of_passages[scope].append(result)\n",
     "    return index_of_passages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def group_by_doi(results):\n",
+    "    by_doi = {r[\"document\"][\"doi\"]:[] for r in results}\n",
+    "    for result in results:\n",
+    "        by_doi[result[\"document\"][\"doi\"]].append(result)\n",
+    "    return by_doi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>901-950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{u'reference_count': 1, u'quotation_count': 8,...</td>\n",
+       "      <td>{u'reference_count': 2, u'quotation_count': 4,...</td>\n",
+       "      <td>{u'reference_count': 25, u'quotation_count': 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951-1000</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{u'reference_count': 9, u'quotation_count': 11...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           1    2    3    4    5    6    7    8    9   \\\n",
+       "901-950   NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "951-1000  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "\n",
+       "                                                         10  \\\n",
+       "901-950   {u'reference_count': 1, u'quotation_count': 8,...   \n",
+       "951-1000                                                NaN   \n",
+       "\n",
+       "                                                         11  \\\n",
+       "901-950   {u'reference_count': 2, u'quotation_count': 4,...   \n",
+       "951-1000                                                NaN   \n",
+       "\n",
+       "                                                         12  \n",
+       "901-950   {u'reference_count': 25, u'quotation_count': 1...  \n",
+       "951-1000  {u'reference_count': 9, u'quotation_count': 11...  "
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quotation_freq_df.tail(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for rowid, row in list(quotation_freq_df.iterrows()):\n",
+    "    for i,value in enumerate(row):\n",
+    "        if(value is not np.nan):\n",
+    "            results = group_by_passage(value[\"results\"])\n",
+    "            groups = []\n",
+    "            # this will need to be sorted first!\n",
+    "            for line in sorted(results.keys(),key=lambda x: float(x)):\n",
+    "                group = {}\n",
+    "                group[\"line\"] = line\n",
+    "                group[\"ref_count\"] = sum([1 for result in results[line] if result[\"type\"]==\"reference\"])\n",
+    "                group[\"quot_count\"] = sum([1 for result in results[line] if result[\"type\"]==\"quotation\"])\n",
+    "                group[\"label\"] = \"%s %s\"%(\"Aen.\",line)\n",
+    "                group[\"results\"] = results[line]\n",
+    "                groups.append(group)\n",
+    "            quotation_freq_df.loc[rowid][row.index[i]][\"results\"] = groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_matrix_as_json(quotation_freq_df, \"../data/quot_freq.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#quotation_freq_df.loc[\"1-50\"][1][\"results\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groups = group_by_passage(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for group in groups:\n",
+    "    groups[group] = group_by_doi(groups[group])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# for each chunk\n",
+    "# group the results by line\n",
+    "# order the resulting dict by line\n",
+    "# group by doi\n",
+    "# order by doi chronologically (take year info from external dict)\n",
+    "# create labels for articles, counts etc.\n",
+    "[\n",
+    "    {\n",
+    "        \"line\":\"1.1\"\n",
+    "        ,\"label\":\"Aen. 1.1\"\n",
+    "        ,\"reference_count\":10\n",
+    "        ,\"quotation_count\":50\n",
+    "        \"groups\" = [\n",
+    "            {\n",
+    "             \"label\":\"Carl P. E. Springer (2003)\"\n",
+    "             ,\"doi\":\"10.2307/30221884\"\n",
+    "             ,\"n_quotations\":1\n",
+    "             ,\"n_references\":2\n",
+    "             ,\"results\" = [] \n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]"
    ]
   },
   {
@@ -899,7 +1143,7 @@
     "        else:\n",
     "            prev_line = text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"][:-1]),chunks))].pop()\n",
     "            prev_line[\"text\"] = \"%s %s\"%(prev_line[\"text\"],line.text)\n",
-    "            text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"][:-1]),chunks))].append(prev_line)§"
+    "            text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"][:-1]),chunks))].append(prev_line)"
    ]
   },
   {
